--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="K.png">
     <link rel="icon" type="image/png" sizes="16x16" href="K.png">
     <link rel="manifest" href="site.webmanifest">
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GW90GXK59Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-GW90GXK59Z');
+</script>
 </head>
 
 
