--- a/about.html
+++ b/about.html
@@ -26,13 +26,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="K.png">
     <link rel="manifest" href="site.webmanifest">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GW90GXK59Z"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXN44CK9FE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GW90GXK59Z');
+  gtag('config', 'G-MXN44CK9FE');
 </script>
 
 
