--- a/contact.html
+++ b/contact.html
@@ -24,14 +24,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="K.png">
     <link rel="icon" type="image/png" sizes="16x16" href="K.png">
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GW90GXK59Z"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXN44CK9FE"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GW90GXK59Z');
+  gtag('config', 'G-MXN44CK9FE');
 </script>
 
 
