--- a/about.html
+++ b/about.html
@@ -26,15 +26,14 @@
     <link rel="icon" type="image/png" sizes="16x16" href="K.png">
     <link rel="manifest" href="site.webmanifest">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXN44CK9FE"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5BLY260Z1L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-MXN44CK9FE');
+  gtag('config', 'G-5BLY260Z1L');
 </script>
-
 
 <body id="top">
 
