--- a/blog.html
+++ b/blog.html
@@ -26,13 +26,13 @@
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MXN44CK9FE"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5BLY260Z1L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-MXN44CK9FE');
+  gtag('config', 'G-5BLY260Z1L');
 </script>
 </head>
 
