--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="K.png">
     <link rel="icon" type="image/png" sizes="16x16" href="K.png">
     <link rel="manifest" href="site.webmanifest">
-     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-GW90GXK59Z"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5BLY260Z1L"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-GW90GXK59Z');
+  gtag('config', 'G-5BLY260Z1L');
 </script>
 </head>
 
